Fix spotless
Signed-off-by: Austin Lee <austin@aryn.ai>